--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,34 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pydantic==1.10.15
-SQLAlchemy==2.0.34
-python-jose==3.3.0
-passlib[bcrypt]==1.7.4
-langchain
-langchain_groq
+# --- Web framework ---
+fastapi==0.120.1
+uvicorn==0.38.0
+python-multipart==0.0.20
+
+# --- Env vars ---
+python-dotenv==1.2.1
+
+# --- MongoDB (async) ---
+motor==3.7.1
+pymongo==4.15.3
+certifi==2025.10.5
+
+# --- Pydantic v2 + email validation ---
+pydantic==2.12.3
+email-validator==2.3.0
+
+# --- Auth / Security ---
+python-jose==3.5.0
+passlib==1.7.4
+bcrypt==4.1.2
+argon2-cffi==25.1.0
+
+
+# --- HTTP calls ---
+requests==2.32.5
+
+# --- LangChain + Groq (AI part) ---
+langchain==1.0.2
+langchain-core==1.0.1
+langchain-groq==1.0.0
+
+# --- Email (for OTP via SendGrid) ---
+sendgrid==6.11.0
