--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-GROQ_API_KEY = "API_KEY_HERE"
-MONGODB_URL=mongodb+srv://User:Password@cluster0.ya0ymet.mongodb.net/?appName=Cluster0
+GROQ_API_KEY="YOUR_GROQ_API_KEY_HERE"
+MONGODB_URL="mongodb+srv://USER:PASSWORD@cluster0.ya0ymet.mongodb.net/voyagr?retryWrites=true&w=majority&appName=Cluster0"
 DATABASE_NAME=voyagr
-SECRET_KEY=abcdefghijklmnopqrstuvwxyz
+SECRET_KEY="YOUR_RANDOM_SECRET_KEY_HERE"
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+SENDGRID_API_KEY="YOUR_SENDGRID_API_KEY_HERE"
+SENDGRID_SENDER_EMAIL="your-email@example.com"
+SENDGRID_SENDER_NAME="Voyagr"
